2.3.0.dev1
---------------

- toxresults.pt: use just one line for result status indicator

- adapt devpi-web to devpi-server-2.2.0 hash-spec changes

- version.pt: moved hash to title attribute of table cell. With the upcoming
  change to sha256 it's too long and it's available from the link url as well.


2.2.3
---------------

- fix issue207: added documentation url for latest stable release of a package.


2.2.2
---------------

- fix issue184: better height calculation of documentation iframe.


2.2.1
---------------

- require devpi-server>=2.1.2

- fix issue175: use normalized name of projects, so redirects from unnormalized
  names works.  NOTE that if you had issues with documentation uploads
  not appearing because of normalization issues ("-" or "_" appearing 
  in the name for example) you need to re-upload the docs or 
  do a full export/import cycle.  

- fix view when tox results can not be parsed. 

- version.pt: removed "code" tag around overwrite count.

- macros.pt: added "footer" tag around the whole footer part.

- version.pt: moved file type, python version and size info from their own
  columns into the file column.

- version.pt: moved history column from before the tox results column to behind
  the tox results.

- version.pt: removed "last modified" from history column

- version.pt: removed timestamp from "replaced" action in history column

- version.pt: add link to PyPI page if applicable.

- fix project page view if there are downloads with filenames which can't be
  parsed as packages with version number

- fix notfound-redirect when serving under an outside URL with a sub path



2.2.0
---------------

- require devpi-server >= 2.1.0

- static resources now have a plus in front to avoid clashes with usernames and
  be consistent with how other urls work: "+static/..." and "+theme-static/..."

- adjusted font-sizes and cut-off width of content.

- only show underline on links when hovering.
